showing baloon under the selected string

--- a/popup.html
+++ b/popup.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <style>
-    body {
-      width: 200px;
-      padding: 10px;
-    }
-  </style>
-</head>
-<body>
-  <h2>CSV Search Extension</h2>
-  <p id="result">No data found.</p>
-  <script src="popup.js"></script>
-</body>
+  <head>
+    <title>CSV Matching Extension</title>
+    <script src="popup.js"></script>
+  </head>
+  <body>
+    <h1>CSV Matching Extension</h1>
+    <p id="selectedWord"></p>
+    <p id="matchResult"></p>
+  </body>
 </html>
