--- a/popup.html
+++ b/popup.html
@@ -2,11 +2,9 @@
 <html>
   <head>
     <title>CSV Matching Extension</title>
-    <script src="popup.js"></script>
+    <script src="Popup.js" defer></script>
   </head>
   <body>
-    <h1>CSV Matching Extension</h1>
-    <p id="selectedWord"></p>
-    <p id="matchResult"></p>
+    <div id="popup-root"></div>
   </body>
 </html>
