--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,7 @@
   <head>
     <title>CSV Matching Extension</title>
     <script src="Popup.js" defer></script>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div id="popup-root"></div>
