add a ui lib and a toggle

--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <title>CSV Matching Extension</title>
-    <script src="Popup.js" defer></script>
+    <script src="popup/app.js" defer></script>
+    <link rel="stylesheet" href="popup/app.css">
+    <link rel="stylesheet" href="popup/style.css">
   </head>
   <body>
     <div id="popup-root"></div>
